--- a/Angular Material Application/angular-material/src/app/dialog/edit-dialog/edit-dialog.component.html
+++ b/Angular Material Application/angular-material/src/app/dialog/edit-dialog/edit-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Student</h1>
+<h1 mat-dialog-title>Edit Student</h1>
 
  <form [formGroup]=form >
 
@@ -15,7 +15,6 @@
     <mat-label>Date of Birth</mat-label>
     <input matInput formControlName="dateOfBirth">
 
-    <mat-error *ngIf="form.controls['dateOfBirth'].errors?.maxlength && !form.controls['dateOfBirth'].errors?.pattern ">Max length 2</mat-error>
     <mat-error *ngIf="form.controls['dateOfBirth'].errors?.required">This field is required</mat-error>
     <mat-error *ngIf="form.controls['dateOfBirth'].errors?.pattern && !form.controls['dateOfBirth'].errors?.maxlength">Invalid Field</mat-error>
     <mat-error *ngIf="form.controls['dateOfBirth'].errors?.pattern && form.controls['dateOfBirth'].errors?.maxlength">Invalid Field</mat-error>
@@ -25,7 +24,7 @@
   </mat-form-field>
   <br>
 
-  <mat-form-field appearance="fill">
+      <mat-form-field appearance="fill">
     <mat-label>ID Copy</mat-label>
 
  <span>   <ngx-mat-file-input formControlName="idCopy"  [multiple]="false"
@@ -40,7 +39,7 @@
     <mat-label>GPA</mat-label>
     <input matInput formControlName="gpa">
 
-    <mat-error *ngIf="form.controls['gpa'].errors?.maxlength && !form.controls['gpa'].errors?.pattern ">Max length 2</mat-error>
+    <mat-error *ngIf="form.controls['gpa'].errors?.maxlength && !form.controls['gpa'].errors?.pattern ">Max length 50</mat-error>
     <mat-error *ngIf="form.controls['gpa'].errors?.required">This field is required</mat-error>
     <mat-error *ngIf="form.controls['gpa'].errors?.pattern && form.controls['gpa'].errors?.maxlength">Invalid Field</mat-error>
     <mat-error *ngIf="form.controls['gpa'].errors?.pattern && !form.controls['gpa'].errors?.maxlength">Invalid Field</mat-error>
@@ -51,7 +50,7 @@
   <br>
 
   <div mat-dialog-actions>
-  <button mat-raised-button type="submit"  class="submit adddialog" [disabled]="form.invalid || fileType" (click)="submit()">Add</button>
-  <button mat-raised-button class="cancel adddialog" (click)="onNoClick()">Cancel</button>
+  <button mat-raised-button type="submit"  class="submit adddialog" [disabled]="form.invalid || fileType" (click)="onSubmit()">Confirm</button>
+  <button mat-raised-button class="cancel adddialog" (click)="onClose()">Cancel</button>
 </div>
   </form>
